--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
 }
 
+/* HEADER STYLE */
+
 header {
     max-width: 1200px;
     height: 230px;
@@ -40,20 +42,104 @@ nav {
 
 .logo {
     width: 15%;
- 
-}
+ }
 
-.box_pink {
+ /* MAIN E SECTION STYLE */
+
+.box {
+    border: 1px dashed black;
+} 
+
+.pink {
     width: 60%;
     height: 150px;
     background-color: #ee82ee;
     margin: 0 auto; 
     margin-top: 20px;
+}
+  
+.section, .aside-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width:100%;
+    min-height:210px;
+}
+
+section .lightgray {
+    background-color:#d3d3d3 ;
+}
+
+#big-section {
+    width: 100%;
+    min-height: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.lightblue {
+    width: 50%;
+    height: 180px;
+    background-color: #1e90ff;
+}
+
+.lightpink {
+    width: 30%;
+    height: 180px;
+    background-color: #ffc0cb;
+}
+
+.box-green {
+    width: 80%;
+    height:300px ;
+    background-color: #228b22;
+    border: 1px dashed black;
     
-   
+}
 
+.aside-box {
+    width: 15%;
+    height: 180px;
+    background-color: #f08080;
+    border: 1px dashed black;
+    
+}
 
+.small-box {
+    width: 10%;
+    height: 180px;
+    background-color:#20b2aa;
+    border: 1px dashed white;
+}
 
+/* FOOTER STYLE */
+
+footer {
+    background-color:  #23272a;
+    border-bottom: 2px solid white;
+  
+}
+.container-footer {
+    width: 80%;
+    background-color:#7fffd4 ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.logo-footer, .button {
+    border: 1px dashed black;
+    background-color: #ffb6c1;
+    padding: 2px;
+}
+
+hr {
+    margin-bottom: 10px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
 
 
 
